--- a/Ogani Tempalte/checkout.html
+++ b/Ogani Tempalte/checkout.html
@@ -210,8 +210,8 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
-                                <span>support 24/7 time</span>
+                                <h5>+84 36.363.636</h5>
+                                <span>hỗ trợ 24/7</span>
                             </div>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                         </div>
                         <ul>
                             <li>Address: 60-49 Road 11378 New York</li>
-                            <li>Phone: +65 11.188.888</li>
+                            <li>Phone: +84 36.363.636</li>
                             <li>Email: hello@colorlib.com</li>
                         </ul>
                     </div>
