--- a/Ogani Tempalte/blog.html
+++ b/Ogani Tempalte/blog.html
@@ -211,7 +211,7 @@
                             </div>
                             <div class="hero__search__phone__text">
                                 <h5>+84 36.363.636</h5>
-                                <span>support 24/7 time</span>
+                                <span>hỗ trợ 24/7</span>
                             </div>
                         </div>
                     </div>
