--- a/Ogani Tempalte/index.html
+++ b/Ogani Tempalte/index.html
@@ -934,7 +934,7 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>Địa chỉ: 1 đường a TP Hồ Chí Minh</li>
+                <li>Địa chỉ: 36/18 Thanh Hóa aka Nam Định City</li>
                 <li>SĐT: +84 36.363.636</li>
                 <li>Email: napthe@vip.com</li>
               </ul>
