--- a/Ogani Tempalte/blog-details.html
+++ b/Ogani Tempalte/blog-details.html
@@ -2,11 +2,10 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Ogani Template" />
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ogani | Template</title>
+    <title>NapTheVip</title>
 
     <!-- Google Font -->
     <link
@@ -479,41 +478,41 @@
               </div>
               <ul>
                 <li>Địa chỉ: 36/18 Thanh Hóa aka Nam Định City</li>
-                <li>Điện thoại: +84 36.363.636</li>
+                <li>SĐT: +84 36.363.636</li>
                 <li>Email: napthe@vip.com</li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
             <div class="footer__widget">
-              <h6>Useful Links</h6>
+              <h6>Liên kết hữu ích</h6>
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">About Our Shop</a></li>
-                <li><a href="#">Secure Shopping</a></li>
-                <li><a href="#">Delivery infomation</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Our Sitemap</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Về cửa hàng</a></li>
+                <li><a href="#">Bảo mật thanh toán</a></li>
+                <li><a href="#">Chính sách vận chuyển</a></li>
+                <li><a href="#">Chính sách bảo mật</a></li>
+                <li><a href="#">Sơ đồ trang web</a></li>
               </ul>
               <ul>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Đội ngũ chúng tôi</a></li>
+                <li><a href="#">Dịch vụ</a></li>
                 <li><a href="#">Dự án</a></li>
                 <li><a href="#">Liên hệ</a></li>
-                <li><a href="#">Innovation</a></li>
-                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Sáng tạo</a></li>
+                <li><a href="#">Đánh giá khách hàng</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>Join Our Newsletter Now</h6>
+              <h6>Đăng ký nhận tin ngay</h6>
               <p>
-                Get E-mail updates about our latest shop and special offers.
+                Nhận thông báo qua email về sản phẩm mới và các ưu đãi đặc biệt.
               </p>
               <form action="#">
-                <input type="text" placeholder="Enter your mail" />
-                <button type="submit" class="site-btn">Subscribe</button>
+                <input type="text" placeholder="Nhập email của bạn..." />
+                <button type="submit" class="site-btn">ĐĂNG KÝ</button>
               </form>
               <div class="footer__widget__social">
                 <a href="#"><i class="fa fa-facebook"></i></a>
