--- a/Ogani Tempalte/blog.html
+++ b/Ogani Tempalte/blog.html
@@ -2,11 +2,10 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Ogani Template" />
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ogani | Template</title>
+    <title>NapTheVip</title>
 
     <!-- Google Font -->
     <link
@@ -262,17 +261,17 @@
                 </form>
               </div>
               <div class="blog__sidebar__item">
-                <h4>Categories</h4>
+                <h4>Danh mục</h4>
                 <ul>
-                  <li><a href="#">All</a></li>
-                  <li><a href="#">Beauty (20)</a></li>
-                  <li><a href="#">Food (5)</a></li>
-                  <li><a href="#">Life Style (9)</a></li>
-                  <li><a href="#">Travel (10)</a></li>
+                  <li><a href="#">Tất cả</a></li>
+                  <li><a href="#">Tin Khuyến Mãi (20)</a></li>
+                  <li><a href="#">Hướng dẫn nạp thẻ (5)</a></li>
+                  <li><a href="#">Sự kiện Game (9)</a></li>
+                  <li><a href="#">Thủ thuật (10)</a></li>
                 </ul>
               </div>
               <div class="blog__sidebar__item">
-                <h4>Recent News</h4>
+                <h4>Bài viết mới nhất</h4>
                 <div class="blog__sidebar__recent">
                   <a href="#" class="blog__sidebar__recent__item">
                     <div class="blog__sidebar__recent__item__pic">
@@ -280,10 +279,9 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        09 Kinds Of Vegetables<br />
-                        Protect The Liver
+                        Hướng dẫn nạp thẻ Garena chiết khấu cao
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span> Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                   <a href="#" class="blog__sidebar__recent__item">
@@ -292,10 +290,9 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        Tips You To Balance<br />
-                        Nutrition Meal Day
+                        Sự kiện: Tặng thêm 50% giá trị thẻ nạp
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span>Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                   <a href="#" class="blog__sidebar__recent__item">
@@ -304,9 +301,9 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        4 Principles Help You Lose <br />Weight With Vegetables
+                        Cách mua thẻ cào bằng Momo nhanh nhất
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span>Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                 </div>
@@ -314,12 +311,12 @@
               <div class="blog__sidebar__item">
                 <h4>Tìm kiếm theo</h4>
                 <div class="blog__sidebar__item__tags">
-                  <a href="#">Apple</a>
-                  <a href="#">Beauty</a>
-                  <a href="#">Vegetables</a>
-                  <a href="#">Fruit</a>
-                  <a href="#">Healthy Food</a>
-                  <a href="#">Lifestyle</a>
+                  <a href="#">Giftcode</a>
+                  <a href="#">Khuyến mãi</a>
+                  <a href="#">Esports</a>
+                  <a href="#">Liên Quân</a>
+                  <a href="#">Free Fire</a>
+                  <a href="#">FIFA</a>
                 </div>
               </div>
             </div>
@@ -333,17 +330,20 @@
                   </div>
                   <div class="blog__item__text">
                     <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                      <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                       <li><i class="fa fa-comment-o"></i> 5</li>
                     </ul>
-                    <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
+                    <h5><a href="#">
+                      Cách nhận ngay 10K từ MoMo cho lần đầu nạp thẻ tại
+                      NapTheVip
+                    </a></h5>
                     <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
+                      Bạn đã biết cách nhập mã MOMONAPTHENGAY để được giảm giá 10k
+                      chưa? Làm theo hướng dẫn đơn giản sau đây để nhận quà.
                     </p>
                     <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
-                    ></a>
+                      >Đọc thêm <span class="arrow_right"></span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -354,17 +354,20 @@
                   </div>
                   <div class="blog__item__text">
                     <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                      <li><i class="fa fa-comment-o"></i> 5</li>
+                    <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
+                    <li><i class="fa fa-comment-o"></i> 5</li>
                     </ul>
-                    <h5><a href="#">Visit the clean farm in the US</a></h5>
+                    <h5><a href="#">
+                      Lịch khuyến mãi nạp thẻ điện thoại Viettel, Vina, Mobi mới
+                      nhất
+                    </a></h5>
                     <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
+                      Cập nhật nhanh lịch "Ngày Vàng", "Khuyến mãi Data 4G/5G" từ
+                      các nhà mạng để không bỏ lỡ cơ hội nạp thẻ lời nhất.
                     </p>
-                    <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
-                    ></a>
+                    <a href="#" class="blog__btn">
+                      Đọc thêm <span class="arrow_right"></span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -375,83 +378,40 @@
                   </div>
                   <div class="blog__item__text">
                     <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                      <li><i class="fa fa-comment-o"></i> 5</li>
-                    </ul>
-                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                    <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
-                    </p>
-                    <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="blog__item">
-                  <div class="blog__item__pic">
-                    <img src="img/blog/blog-4.jpg" alt="" />
-                  </div>
-                  <div class="blog__item__text">
-                    <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                      <li><i class="fa fa-comment-o"></i> 5</li>
-                    </ul>
-                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                    <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
-                    </p>
-                    <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="blog__item">
-                  <div class="blog__item__pic">
-                    <img src="img/blog/blog-4.jpg" alt="" />
-                  </div>
-                  <div class="blog__item__text">
-                    <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                      <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                       <li><i class="fa fa-comment-o"></i> 5</li>
                     </ul>
                     <h5>
-                      <a href="#"
-                        >The Moment You Need To Remove Garlic From The Menu</a
-                      >
+                      <a href="#"> 
+                        Nạp thẻ Garena, Zing, Vcoin nhận ngay ưu đãi "khủng" tháng 12
+                      </a>
                     </h5>
                     <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
+                      Đừng bỏ lỡ cơ hội nạp Quân Huy, Kim Cương, RP với chiết khấu
+                      cực cao trong tháng này. Xem ngay chi tiết sự kiện!
                     </p>
-                    <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
-                    ></a>
+                    <a href="#" class="blog__btn">
+                      Đọc thêm <span class="arrow_right"></span>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="blog__item">
                   <div class="blog__item__pic">
-                    <img src="img/blog/blog-6.jpg" alt="" />
+                    <img src="img/blog/blog-4.jpg" alt="" />
                   </div>
                   <div class="blog__item__text">
                     <ul>
-                      <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                      <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                       <li><i class="fa fa-comment-o"></i> 5</li>
                     </ul>
-                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
+                    <h5><a href="#">Hệ thống nạp thẻ tự động 24/7: Nhận mã ngay chỉ sau 5 giây</a></h5>
                     <p>
-                      Sed quia non numquam modi tempora indunt ut labore et
-                      dolore magnam aliquam quaerat
+                      Bạn đang cần thẻ gấp để đua top lúc nửa đêm? Đừng lo! Hệ thống NapTheVip hoạt động xuyên đêm, tự động trả thẻ tức thì giúp cuộc chơi của bạn không bao giờ bị gián đoạn.
                     </p>
                     <a href="#" class="blog__btn"
-                      >READ MORE <span class="arrow_right"></span
+                      >Đọc thêm <span class="arrow_right"></span
                     ></a>
                   </div>
                 </div>
@@ -482,41 +442,41 @@
               </div>
               <ul>
                 <li>Địa chỉ: 36/18 Thanh Hóa aka Nam Định City</li>
-                <li>Điện thoại: +84 36.363.636</li>
+                <li>SĐT: +84 36.363.636</li>
                 <li>Email: napthe@vip.com</li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
             <div class="footer__widget">
-              <h6>Useful Links</h6>
+              <h6>Liên kết hữu ích</h6>
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">About Our Shop</a></li>
-                <li><a href="#">Secure Shopping</a></li>
-                <li><a href="#">Delivery infomation</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Our Sitemap</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Về cửa hàng</a></li>
+                <li><a href="#">Bảo mật thanh toán</a></li>
+                <li><a href="#">Chính sách vận chuyển</a></li>
+                <li><a href="#">Chính sách bảo mật</a></li>
+                <li><a href="#">Sơ đồ trang web</a></li>
               </ul>
               <ul>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#">Đội ngũ chúng tôi</a></li>
+                <li><a href="#">Dịch vụ</a></li>
+                <li><a href="#">Dự án</a></li>
                 <li><a href="#">Liên hệ</a></li>
-                <li><a href="#">Innovation</a></li>
-                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Sáng tạo</a></li>
+                <li><a href="#">Đánh giá khách hàng</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>Join Our Newsletter Now</h6>
+              <h6>Đăng ký nhận tin ngay</h6>
               <p>
-                Get E-mail updates about our latest shop and special offers.
+                Nhận thông báo qua email về sản phẩm mới và các ưu đãi đặc biệt.
               </p>
               <form action="#">
-                <input type="text" placeholder="Enter your mail" />
-                <button type="submit" class="site-btn">Subscribe</button>
+                <input type="text" placeholder="Nhập email của bạn..." />
+                <button type="submit" class="site-btn">ĐĂNG KÝ</button>
               </form>
               <div class="footer__widget__social">
                 <a href="#"><i class="fa fa-facebook"></i></a>
