--- a/Ogani Tempalte/shoping-cart.html
+++ b/Ogani Tempalte/shoping-cart.html
@@ -257,10 +257,10 @@
               <table>
                 <thead>
                   <tr>
-                    <th class="shoping__product">Products</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
+                    <th class="shoping__product">Thẻ Nạp</th>
+                    <th>Giá</th>
+                    <th>Số Lượng</th>
+                    <th>Tổng</th>
                     <th></th>
                   </tr>
                 </thead>
@@ -268,9 +268,9 @@
                   <tr>
                     <td class="shoping__cart__item">
                       <img src="img/cart/cart-1.jpg" alt="" />
-                      <h5>Vegetable’s Package</h5>
+                      <h5>Thẻ Garena</h5>
                     </td>
-                    <td class="shoping__cart__price">$55.00</td>
+                    <td class="shoping__cart__price">20.000 VND</td>
                     <td class="shoping__cart__quantity">
                       <div class="quantity">
                         <div class="pro-qty">
@@ -278,7 +278,7 @@
                         </div>
                       </div>
                     </td>
-                    <td class="shoping__cart__total">$110.00</td>
+                    <td class="shoping__cart__total">20.000 VND</td>
                     <td class="shoping__cart__item__close">
                       <span class="icon_close"></span>
                     </td>
@@ -286,9 +286,9 @@
                   <tr>
                     <td class="shoping__cart__item">
                       <img src="img/cart/cart-2.jpg" alt="" />
-                      <h5>Fresh Garden Vegetable</h5>
+                      <h5>Thẻ Vinaphone</h5>
                     </td>
-                    <td class="shoping__cart__price">$39.00</td>
+                    <td class="shoping__cart__price">20.000 VND</td>
                     <td class="shoping__cart__quantity">
                       <div class="quantity">
                         <div class="pro-qty">
@@ -296,7 +296,7 @@
                         </div>
                       </div>
                     </td>
-                    <td class="shoping__cart__total">$39.99</td>
+                    <td class="shoping__cart__total">20.000 VND</td>
                     <td class="shoping__cart__item__close">
                       <span class="icon_close"></span>
                     </td>
@@ -304,9 +304,9 @@
                   <tr>
                     <td class="shoping__cart__item">
                       <img src="img/cart/cart-3.jpg" alt="" />
-                      <h5>Organic Bananas</h5>
+                      <h5>Thẻ Viettel</h5>
                     </td>
-                    <td class="shoping__cart__price">$69.00</td>
+                    <td class="shoping__cart__price">20.000 VND</td>
                     <td class="shoping__cart__quantity">
                       <div class="quantity">
                         <div class="pro-qty">
@@ -314,7 +314,7 @@
                         </div>
                       </div>
                     </td>
-                    <td class="shoping__cart__total">$69.99</td>
+                    <td class="shoping__cart__total">20.000 VND</td>
                     <td class="shoping__cart__item__close">
                       <span class="icon_close"></span>
                     </td>
@@ -329,29 +329,29 @@
             <div class="shoping__cart__btns">
               <a href="#" class="primary-btn cart-btn">Tiếp tục mua</a>
               <a href="#" class="primary-btn cart-btn cart-btn-right"
-                ><span class="icon_loading"></span> Upadate Cart</a
+                ><span class="icon_loading"></span> Cập nhật giỏ hàng</a
               >
             </div>
           </div>
           <div class="col-lg-6">
             <div class="shoping__continue">
               <div class="shoping__discount">
-                <h5>Discount Codes</h5>
+                <h5>Mã giảm giá</h5>
                 <form action="#">
-                  <input type="text" placeholder="Enter your coupon code" />
-                  <button type="submit" class="site-btn">APPLY COUPON</button>
+                  <input type="text" placeholder="Nhập mã giảm giá" />
+                  <button type="submit" class="site-btn">Áp dụng mã</button>
                 </form>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="shoping__checkout">
-              <h5>Cart Total</h5>
+              <h5>Tổng đơn hàng</h5>
               <ul>
-                <li>Subtotal <span>$454.98</span></li>
-                <li>Total <span>$454.98</span></li>
+                <li>Tổng tiền hàng <span>500.000 VND</span></li>
+                <li>Thành tiền <span>500.000 VND</span></li>
               </ul>
-              <a href="#" class="primary-btn">PROCEED TO CHECKOUT</a>
+              <a href="#" class="primary-btn">Tiến hành thanh toán</a>
             </div>
           </div>
         </div>
