--- a/Ogani Tempalte/checkout.html
+++ b/Ogani Tempalte/checkout.html
@@ -254,62 +254,62 @@
         <div class="row">
           <div class="col-lg-12">
             <h6>
-              <span class="icon_tag_alt"></span> Have a coupon?
-              <a href="#">Click here</a> to enter your code
+              <span class="icon_tag_alt"></span> Bạn có mã giảm giá?
+              <a href="#">Nhấn vào đây</a> để nhập mã
             </h6>
           </div>
         </div>
         <div class="checkout__form">
-          <h4>Billing Details</h4>
+          <h4>Thông tin thanh toán</h4>
           <form action="#">
             <div class="row">
               <div class="col-lg-8 col-md-6">
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="checkout__input">
-                      <p>Fist Name<span>*</span></p>
+                      <p>Họ<span>*</span></p>
                       <input type="text" />
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="checkout__input">
-                      <p>Last Name<span>*</span></p>
+                      <p>Tên đầy đủ<span>*</span></p>
                       <input type="text" />
                     </div>
                   </div>
                 </div>
                 <div class="checkout__input">
-                  <p>Country<span>*</span></p>
+                  <p>Quốc gia<span>*</span></p>
                   <input type="text" />
                 </div>
                 <div class="checkout__input">
                   <p>Địa chỉ<span>*</span></p>
                   <input
                     type="text"
-                    placeholder="Street Address"
+                    placeholder="Số nhà, Tên đường"
                     class="checkout__input__add"
                   />
                   <input
                     type="text"
-                    placeholder="Apartment, suite, unite ect (optinal)"
+                    placeholder="Tòa nhà, Căn hộ, Tầng (tùy chọn)"
                   />
                 </div>
                 <div class="checkout__input">
-                  <p>Town/City<span>*</span></p>
+                  <p>Tỉnh/Thành phố<span>*</span></p>
                   <input type="text" />
                 </div>
                 <div class="checkout__input">
-                  <p>Country/State<span>*</span></p>
+                  <p>Quốc gia/Vùng<span>*</span></p>
                   <input type="text" />
                 </div>
                 <div class="checkout__input">
-                  <p>Postcode / ZIP<span>*</span></p>
+                  <p>Mã bưu điện<span>*</span></p>
                   <input type="text" />
                 </div>
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="checkout__input">
-                      <p>Phone<span>*</span></p>
+                      <p>Số điện thoại<span>*</span></p>
                       <input type="text" />
                     </div>
                   </div>
@@ -322,17 +322,17 @@
                 </div>
                 <div class="checkout__input__checkbox">
                   <label for="acc">
-                    Create an account?
+                    Tạo tài khoản?
                     <input type="checkbox" id="acc" />
                     <span class="checkmark"></span>
                   </label>
                 </div>
                 <p>
-                  Create an account by entering the information below. If you
-                  are a returning customer please login at the top of the page
+                  Quý khách có thể tạo tài khoản bằng cách điền thông tin bên
+                  dưới. Nếu đã có tài khoản, vui lòng Đăng nhập ở đầu trang.
                 </p>
                 <div class="checkout__input">
-                  <p>Account Password<span>*</span></p>
+                  <p>Mật khẩu tài khoản<span>*</span></p>
                   <input type="text" />
                 </div>
                 <div class="checkout__input__checkbox">
@@ -343,44 +343,45 @@
                   </label>
                 </div>
                 <div class="checkout__input">
-                  <p>Order notes<span>*</span></p>
+                  <p>Ghi chú đơn hàng<span>*</span></p>
                   <input
                     type="text"
-                    placeholder="Notes about your order, e.g. special notes for delivery."
+                    placeholder="Ghi chú về đơn hàng, ví dụ: lưu ý đặc biệt khi giao hàng"
                   />
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="checkout__order">
-                  <h4>Your Order</h4>
+                  <h4>Đơn hàng của bạn</h4>
                   <div class="checkout__order__products">
-                    Products <span>Total</span>
+                    Sản phẩm <span>Thành tiền</span>
                   </div>
                   <ul>
-                    <li>Vegetable’s Package <span>$75.99</span></li>
-                    <li>Fresh Vegetable <span>$151.99</span></li>
-                    <li>Organic Bananas <span>$53.99</span></li>
+                    <li>Thẻ Garena <span>20.000 VND</span></li>
+                    <li>Thẻ Vinaphone <span>20.000 VND</span></li>
+                    <li>Thẻ Viettel <span>20.000 VND</span></li>
                   </ul>
                   <div class="checkout__order__subtotal">
-                    Subtotal <span>$750.99</span>
+                    Tổng tiền hàng <span>60.000 VND</span>
                   </div>
                   <div class="checkout__order__total">
-                    Total <span>$750.99</span>
+                    Tổng thanh toán <span>60.000 VND</span>
                   </div>
                   <div class="checkout__input__checkbox">
                     <label for="acc-or">
-                      Create an account?
+                      Tạo tài khoản?
                       <input type="checkbox" id="acc-or" />
                       <span class="checkmark"></span>
                     </label>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adip elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Quý khách vui lòng chọn một trong các phương thức thanh toán
+                    dưới đây để hoàn tất việc mua thẻ nạp. Hệ thống sẽ tự động
+                    gửi mã thẻ nạp qua Email sau khi giao dịch thành công
                   </p>
                   <div class="checkout__input__checkbox">
                     <label for="payment">
-                      Check Payment
+                      Thanh toán qua chuyển khoản ngân hàng
                       <input type="checkbox" id="payment" />
                       <span class="checkmark"></span>
                     </label>
@@ -392,7 +393,9 @@
                       <span class="checkmark"></span>
                     </label>
                   </div>
-                  <button type="submit" class="site-btn">PLACE ORDER</button>
+                  <button type="submit" class="site-btn">
+                    HOÀN TẤT ĐƠN HÀNG
+                  </button>
                 </div>
               </div>
             </div>
